@@ -1,6 +1,13 @@
+=== unreleased
+
+==== バグ修正
+
+* [JRuby] Document#parse should support IO objects that respond to #read. (#1124) (Thanks, Jake Byman!)
+
+
 === 1.6.6.2 / 2015年01月23日
 
-==== Bug fixes
+==== バグ修正
 
 * Fixed installation issue affecting compiler arguments. (#1230)
 
@@ -159,7 +166,7 @@ libxml2 2.6.21 以上が必要に. (従前は 2.6.17 以上)
 
 === 1.6.1 / 2013年12月14日
 
-* Bugfixes
+* バグ修正
 
   * (JRuby) 不正なドキュメントをパースするときにメモリ不足に陥るバグを修正
   * (JRuby) Billion-laughs攻撃対策のリグレッションを修正 #586
@@ -199,7 +206,7 @@ libxml2 2.6.21 以上が必要に. (従前は 2.6.17 以上)
 
 === 1.5.11 / 2013年12月14日
 
-* Bugfixes
+* バグ修正
 
   * (JRuby) 不正なドキュメントをパースするときにメモリ不足に陥るバグを修正
   * (JRuby) Billion-laughs攻撃対策のリグレッションを修正 #586
